syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/milindmadhukar/gRPC-tutorial/pb";

message User {
  string username = 1;
  string name = 2;
  string mail = 3;
  google.protobuf.Timestamp created_at = 4;
}


